# bfloat

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: bfloat16.hpp.2D4425F5142AF801.idx
cmake/: bfloat16-config.cmake.in
include/bfloat16/: bfloat16.hpp
tests/: bfloat16_tests.cpp
tests/.cache/clangd/index/: bfloat16_tests.cpp.A0BF61328FA78F6E.idx
